# Garagem2

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
garagem/: admin.py
garagem/migrations/: 0001_initial.py  0002_alter_modelo_options.py  0002_veiculo_capa.py  0003_remove_veiculo_imagem_veiculo_imagem.py  0003_rename_capa_veiculo_imagem.py
garagem/models/: modelo.py  veiculo.py
garagem/serializer/: __init__.py  acessorio.py  categoria.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
