[project]
name = "jheni"
version = "0.1.0"
description = ""
authors = [
    {name = "eugreg", email = "daiaegregory@gmail.com"},
]
dependencies = [
    "django>=4.2.4",
    "drf-spectacular>=0.26.4",
    "django-cors-headers>=4.2.0",
    "setuptools>=68.1.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
